# rust-midi-router

./: .gitignore  package-lock.json  package.json
docs/plans/: 2026-02-03-midi-router-design.md  2026-02-03-v1-implementation.md  2026-02-04-cc-mapping-design.md  2026-02-04-clock-master-design.md  2026-02-04-clock-master-implementation.md  2026-02-05-midi-learn-design.md  2026-02-05-shadcn-migration-design.md  2026-02-05-shadcn-migration-plan.md
docs/research/: compass_artifact_wf-5e207235-fc8e-41c8-9cfa-cc383c1b4b92_text_markdown.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/config/: preset.rs  storage.rs
src-tauri/src/midi/: clock.rs  engine.rs  mod.rs  port_manager.rs  ports.rs  router.rs  transport.rs
src/components/: CcMappingsEditor.css  CcMappingsEditor.tsx  ChannelPopup.css  ChannelPopup.tsx  ChannelSelector.tsx  ClockControl.tsx  MonitorLog.tsx  PresetBar.tsx  RoutingMatrix.tsx
src/components/ui/: Button.tsx  ChannelSelector.css  ChannelSelector.tsx  Dialog.tsx  IconButton.tsx  Input.tsx  Menu.tsx  Select.tsx  index.ts  ui.css
src/data/: deviceCcMaps.ts
src/hooks/: useMidi.ts
src/stores/: appStore.ts
src/styles/: design-tokens.css
src/types/: index.ts
